# Vox-Make

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  meson.build  meson.options
.github/workflows/: ci.yml
cmake/: arm-none-eabi.cmake
docs/: ARCHITECTURE.md  BUILD_SYSTEM_COMPARISON.md  DESIGN_DECISIONS.md  QUICKSTART.md
meson/: arm-qemu.ini  arm-stm32f4.ini  native.ini
scripts/: build.sh  run-qemu.sh
src/app/: main.cpp
src/core/: placeholder.c
src/platform/include/platform/: hal.h
src/platform/native/: hal_native.c
src/platform/qemu/: hal_qemu.c
src/platform/stm32f4/: hal_stm32f4.c
subprojects/: unity.wrap
tests/unit/: test_main.c  test_ring_buffer.c
tools/: pyproject.toml
tools/src/tools/: __init__.py  audio_gen.py
tools/tests/: conftest.py  test_audio_gen.py
