[project]
name = "vox_make-tools"
version = "0.1.0"
description = "Python tooling for vox-make — test generation, evaluation, profiling"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ty>=0.0.26",
    "ruff>=0.15.8",
]

[project.scripts]
# CLI entry points — uncomment and rename as we build them:
# generate-test-audio = "tools.audio_gen:cli"
# evaluate-accuracy   = "tools.evaluator:cli"
# profile-memory      = "tools.mem_profile:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Package lives at src/tools/
[tool.hatch.build.targets.wheel]
packages = ["src/tools"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
    "S",    # flake8-bandit (security)
    "PTH",  # flake8-use-pathlib
    "PL",   # pylint
]
ignore = [
    "S101",   # assert is fine in tests
    "PLR09",  # too-many-* limits are too aggressive
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast, isolated tests",
    "integration: tests that touch files or subprocess",
    "slow: long-running tests (deselect with -m 'not slow')",
]
addopts = "-x --tb=short -q"

[tool.ty.environment]
python-version = "3.12"
